@@ -7,25 +7,25 @@
 @implementation STEnvironmentProcess
 - initWithDescriptionName:(NSString *)descName
 {
-    STEnvironmentDescription *desc;
-    
-    self = [super init];
-
-    if(descName)
+    if ((self = [super init]) != nil)
     {
-        NSLog(@"Creating environment from description '%@'", descName);
-        desc = [STEnvironmentDescription descriptionWithName:descName];
-        environment = [[STEnvironment alloc] initWithDescription:desc];
-    }
-    else
-    {
-        environment = [[STEnvironment alloc] initWithDefaultDescription];
-    }
-    
-    /* FIXME: use some configurable mechanism */
-    [environment setObject:environment forName:@"Environment"];
-    [environment loadModule:@"SimpleTranscript"];
+        STEnvironmentDescription *desc;
 
+        if (descName)
+        {
+            NSLog(@"Creating environment from description '%@'", descName);
+            desc = [STEnvironmentDescription descriptionWithName:descName];
+            environment = [[STEnvironment alloc] initWithDescription:desc];
+        }
+        else
+        {
+            environment = [[STEnvironment alloc] initWithDefaultDescription];
+        }
+
+        /* FIXME: use some configurable mechanism */
+        [environment setObject:environment forName:@"Environment"];
+        [environment loadModule:@"SimpleTranscript"];
+    }
     return self;
 }
 - (void)dealloc
